--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>About | Your Name</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Kayla Strate</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <header id="masthead">
+  <header class="row">
     <div class="container">
-      <a href="index.html" id="logo">Your Name</a>
-      <nav>
+      <div class="col-xs-6 col-med-4">
+      <h1>Kayla Strate</h1>
+      </div>
+      <nav class="col-lg-4 col-md-6 col-sm-5 col-xs-12">
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
