--- a/indexnew.html
+++ b/indexnew.html
@@ -5,54 +5,58 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Kayla Strate</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<header class="row">
-	<div class="col-md-2"></div>
-	<div class="col-md-3" id="logo">
-		<h1>Kayla Strate</h1>
+<div class="container">
+<header> 
+	<div class="row">
+		
+		<div class="col-md-3 col-xs-12" id="logo">
+			<h1>Kayla Strate</h1>
+		</div>
+		<div class="col-sm-2"></div>
+		<div class="col-sm-3">
+	  		<nav>
+				<a href="indexnew.html">About</a>
+        		<a href="portfolio.html">Portfolio</a>
+        		<a href="contact.html">Contact</a>
+      		</nav>
+		
 	</div>
-	<div class="col-md-2"></div>
-	<div class="col-md-3">
-		<nav>
-		<a href="indexnew.html">About</a>
-        <a href="portfolio.html">Portfolio</a>
-        <a href="contact.html">Contact</a>
-      </nav>
-     </div>
-	</div>
-	<div class="col-md-2"></div>
 </header>
-<div class="row">
-	<div class="col-md-2"></div>
-	<div class="col-md-5">
-		<section class="mainsection">
-			 <h1>About Me</h1>
-      	<img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+<main>
+	<div class="row"> 
+		
+		<div class="col-sm-5">
+			<section class="mainsection">
+			 	<div class="title">
+			 	<h1>About Me</h1></div>
+      		<img src="assets/kpenguin.jpg" class="auth-image" alt="Your Name">
       		<p>Marshmallow jelly souffl&eacute; pastry biscuit gummi bears tootsie roll tootsie roll gingerbread. Cotton candy muffin gingerbread fruitcake. Sweet roll souffl&eacute; topping wafer croissant oat cake gummi&nbsp;bears.</p>
       		<p>Jelly-o cheesecake dessert fruitcake ice cream brownie liquorice souffl&eacute;. Caramels biscuit gummi bears tiramisu chupa chups. Croissant macaroon cotton candy cake pudding.</p>
-		</section>
+			</section>
+		</div>
+		<div class="col-md-3 col-sm-offset-1">
+			<section class="sidebar">
+				<div class="title">
+					<h2>Connect with Me</h2>
+				</div>
+				<a href="#"><img src="assets/github_square_black-128.png" class="social" alt="GitHub" /></a>
+        		<a href="#"><img src="assets/linkedinsq.png" class="social" alt="LinkedIn" /></a>
+        		<a href="#"><img src="assets/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
+        		</div>
+			</section>
+		</div>
+		
 	</div>
-	<div class="col-md-3">
-		<section class="sidebar">
-			<div id="connect">
-				<h2>Connect with Me</h2>
-			</div>
-			<a href="#"><img src="assets/images/github-128.png" class="social" alt="GitHub" /></a>
-        	<a href="#"><img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn" /></a>
-        	<a href="#"><img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow" /></a>
-        	</div>
-		</section>
-	</div>
-	<div class="col-md-2"></div>
+</main>
+		<footer>
+			<div class="col-sm-12">
+      		Copyright &copy; 2016 Kayla Strate
+    		</div>
+		</footer>
 </div>
-<footer>
-	<div class="col-md-12">
-    <div class="container">
-      Copyright &copy; 2016 Kayla Strate
-    </div>
-  </footer>
 </body>
 </html>
