--- a/indexnew.html
+++ b/indexnew.html
@@ -21,7 +21,7 @@
 	  		<nav>
 				<a href="indexnew.html">About</a>
         		<a href="portfolio.html">Portfolio</a>
-        		<a href="contact.html">Contact</a>
+        		<a href="contactnew.html">Contact</a>
       		</nav>
 		
 	</div>
